src/styles.css
/* You can add global styles to this file, and also import other style files */
@import "tailwindcss";


.nav-underline .nav-link:hover {
    color: #FF0000;

    transition: color 0.3s ease;
    /* Change text color on hover */
}

.nav-underline .nav-link.active {
    color: #FF0000 !important;

    transition: color 0.3s ease;
    /* Change text color for active link */
}

.nav-link {
    position: relative;
    cursor: default;
    color: #FFF;
    /* adjust as needed */
}

.nav-link:hover,
.nav-link:focus {
    color: #FF0000 !important;
    /* Red on hover/focus */
    font-weight: bold;
}

.nav-link::before {
    content: "";
    position: absolute;
    bottom: -2px;
    right: 0;
    width: 100%;
    height: 2px;
    background-color: #FF0000;
    /* adjust color as needed */
    transform: scaleX(0);
    transform-origin: right;
    transition: transform 0.3s ease;
}

.nav-link:hover::before {
    transform: scaleX(1);
}


.transparent-bg {
    background-color: rgba(3, 7, 18, 0.6);
    /* Gray-950 with 70% opacity */
}

body {
    font-family: 'IBM Plex Mono';
    background-color: black;
    color: white;
}

body::before {
    content: '';
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: url('../public/bg-still1.jpg');
    background-size: cover;
    /* Ensures the image covers the entire viewport */
    background-position: center;
    /* Centers the image */
    filter: blur(3px) brightness(0.75);
    /* Blur and darken the image */
    z-index: -1;
    /* Ensure it stays behind the content */
    animation: contrastPulse 5s infinite ease-in-out;
}

@keyframes contrastPulse {

    0%,
    100% {
        filter: blur(4px) brightness(0.75);
        transform: scaleX(1);
    }

    50% {
        filter: blur(3px) brightness(1);
        transform: scaleX(1.01);
    }
}

/* Don't touch this! */
/* Ensure content is above the background */
body {
    position: relative;
    z-index: 1;
}

.hero-button {
    border-radius: 9999px !important; /* Use !important to override conflicting styles */
    width: 3rem;
    height: 3rem;
  }


.ibm-plex-mono-thin {
    font-family: "IBM Plex Mono", serif;
    font-weight: 100;
    font-style: normal;
}

.ibm-plex-mono-extralight {
    font-family: "IBM Plex Mono", serif;
    font-weight: 200;
    font-style: normal;
}

.ibm-plex-mono-light {
    font-family: "IBM Plex Mono", serif;
    font-weight: 300;
    font-style: normal;
}

.ibm-plex-mono-regular {
    font-family: "IBM Plex Mono", serif;
    font-weight: 400;
    font-style: normal;
}

.ibm-plex-mono-medium {
    font-family: "IBM Plex Mono", serif;
    font-weight: 500;
    font-style: normal;
}

.ibm-plex-mono-semibold {
    font-family: "IBM Plex Mono", serif;
    font-weight: 600;
    font-style: normal;
}

.ibm-plex-mono-bold {
    font-family: "IBM Plex Mono", serif;
    font-weight: 700;
    font-style: normal;
}

.ibm-plex-mono-thin-italic {
    font-family: "IBM Plex Mono", serif;
    font-weight: 100;
    font-style: italic;
}

.ibm-plex-mono-extralight-italic {
    font-family: "IBM Plex Mono", serif;
    font-weight: 200;
    font-style: italic;
}

.ibm-plex-mono-light-italic {
    font-family: "IBM Plex Mono", serif;
    font-weight: 300;
    font-style: italic;
}

.ibm-plex-mono-regular-italic {
    font-family: "IBM Plex Mono", serif;
    font-weight: 400;
    font-style: italic;
}

.ibm-plex-mono-medium-italic {
    font-family: "IBM Plex Mono", serif;
    font-weight: 500;
    font-style: italic;
}

.ibm-plex-mono-semibold-italic {
    font-family: "IBM Plex Mono", serif;
    font-weight: 600;
    font-style: italic;
}

.ibm-plex-mono-bold-italic {
    font-family: "IBM Plex Mono", serif;
    font-weight: 700;
    font-style: italic;
}

